add swagger docs to APIS and added DTOs to auth request body
