# dtos/auth_dto.go
@@ -1,0 +1,6 @@
+package dtos
+
+type SignUpRequest struct {
+	Email    string `json:"email" binding:"required" example:"user@example.com"`
+	Password string `json:"password" binding:"required" example:"secret123"`
+}
